[package]
name = "converter"
version = "0.0.1"
authors = [ "dan" ]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
num_cpus = "*"
threadpool = "*"
walkdir = "*"
image = "*"
gtk = "*"
glib = "*"

[features]
verbose = []
default = [ "gtk_3_22" ]
gtk_3_10 = [ "gtk/v3_10" ]
gtk_3_16 = [ "gtk_3_10", "gtk/v3_16" ]
gtk_3_18 = [ "gtk_3_16", "gtk/v3_18" ]
gtk_3_20 = [ "gtk_3_18", "gtk/v3_20" ]
gtk_3_22 = [ "gtk_3_20", "gtk/v3_22" ]
gtk_3_22_30 = [ "gtk_3_22", "gtk/v3_22_30" ]
